k8s/helloWorldPod.yml

apiVersion: v1
kind: Pod
metadata:
  name: helloworld
spec:
  containers:
    - name: helloworld
      image: docker.io/cclhsu/go_hello_crd_controller:latest
      args:
        - "-http=127.0.0.1:8080"
