k8s/go-hello-crd-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-hello-crd-controller
  # namespace: hello
  labels:
    app: go-hello-crd-controller
spec:
  selector:
    app: go-hello-crd-controller
  type: NodePort
  ports:
  - name: api
    port: 5000
    protocol: TCP
    targetPort: crud-ctrl-svc
